# ZInvisible

./: .gitignore  README.md
Tools/: .gitignore  MakeDYPlots.C  MakeDYplots.C  MakePhotonPlots.C  MakePlots.C  MakeTopPlots.C  Makefile  Makefile.in  MinitupleMakePlots.C  PhotonMethod.C  PhotonTools.h  Plot2.h  Plotter.cc  Plotter.cc.orig  Plotter.h  RegisterFunctions.cc  RegisterFunctions.h  Run2LumisPerEra.json  Run2LumisPerYear.json  ScaleFactors.cc  ScaleFactors.h  ScaleFactorsttBar.cc  ScaleFactorsttBar.h  Systematic.cc  Systematic.h  TopTagger.cfg  TopTagger_AllComb.cfg  TopTagger_noMVA.cfg  bTagEffHists.root  cache_all.sh  calcEff.C  calcEffPhoton.C  calculateCorrectionFactors.py  calculateEfficiency.py  calculateNormalizationFromLL.py  calculateShapeFromPhoton.py  colors.py  configure.ac  control_region_unit_bins_v4.json  cutflowPlot.py  (+38 more)
Tools/condor/: MC_submitter  QCDonly_submitter  batchList.py  checkCondorOutput.py  condorSubmit.py  condor_makeplots  copyMC  data_submitter  goMakeBeff.sh  goMakeDYplots.sh  goMakeEff.sh  goMakeEffPhoton.sh  goMakePlots.sh  goMakeSigEff.sh  goMakeTopPlots.sh  goTTplots.sh  multiSubmit.py  processResults.sh  removeOutput.py  samples.py  submitter
Tools/condor/hadds/: README  condor_submit.txt  do_hadd.sh
Tools/datacard_inputs/: zinv_syst_Run2.conf  zinv_yields_Run2.json
Tools/include/: Ak8DrMatch.h  BasicLepton.h  CountWLep.h  DownsizeBootstrap.h  Fakebtagvectors.h  Gamma.h  GeneratePhotonEfficiency.h  GenerateWeight.h  GetSearchBin.h  JetSort.h  LepInfo.h  MetSmear.h  NJetAk8.h  NJetWeight.h  PhotonTools.h  PrepareMiniTupleVars.h  RJet.h  ShapeNJets.h  SystematicCalc.h  SystematicPrep.h  Taudiv.h  TopPt.h  TriggerInfo.h  TypeDefinitions.h
Tools/investigateGenPhotons/: investigate.cc  investigateGenPhotons.cc
Tools/latex_files/: stack_plots.tex
Tools/python/: All_syst_val.py  Norm_lepton_zmass.py  Run_modules.py  Search_bins.py  Shape_photon_met.py  Validation_all_syst.py  __init__.py  alternate_run_systematics.py  colors.py  combine_hists.py  compare.py  cutflow_plot.py  data_card.py  make_table.py  make_table_example.py  maketex.py  norm_lepton_met.py  norm_lepton_zmass.py  norm_met.py  pie_chart.py  plot_sgamma.py  process.py  quick_plot.py  quick_test.py  run_modules.py  run_systematics.py  search_bins.py  search_bins_v4.json  shape_lepton_njet.py  shape_photon_met.py  systematics.csv  systematics.py  systematicsJsonGen.py  tools.py  units.py  validation_bins_systematics.py
Tools/results/: zinv_syst_Run2.conf  zinv_yields_Run2.json
Tools/scripts/: getMoreResults.sh  getResults.sh
Tools/slides/: maketex.py  stack_plots.tex
(+6 files in other folders)
